feat: update AuthController to send nam instead of email on status; update ui: added modals to add expense, create group and settle expense